# fitness-plan-generator

./: clean.py  generator.py  main.py  pyproject.toml  ui.py
text/: Chapter 7_ Principles of Injury Prevention.txt  Gym-Related_Injuries_and_its_Prevention_and_Treatm.txt  Nutrition-Guide.txt  SP20_FW_PT_AtHome_Workouts_Strength.txt  working-out-your-fitness-plan.txt
