[project]
name = "fitness-plan-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fpdf>=1.7.2",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "loadenv>=0.1.1",
    "pymupdf>=1.27.2",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
